--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "env/validator.js", "env/env.js"],
   "exclude": ["node_modules", "build", "scripts"]
 }
