--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "printWidth": 120,
   "singleQuote": true,
-  "semi": false,
+  "semi": true,
   "trailingComma": "all",
   "arrowParens": "always"
 }
