--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.2",
-    "react-notification-system": "^0.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^8.0.3",
     "react-use": "^17.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4"
