--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.0.3",
     "react-use": "^17.2.4",
+    "recoil": "^0.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4"
   },
