--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/react-notification-system": "^0.2.40",
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.1",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^9.8.4",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.2",
@@ -37,6 +37,8 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-webpack": "^0.13.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsdoc": "^28.5.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -47,7 +49,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.1",
-    "prettier": "^2.0.5",
+    "prettier": "^2.4.1",
     "react-hot-loader": "^4.12.21",
     "rimraf": "^3.0.2",
     "source-map-loader": "^1.0.0",
@@ -68,7 +70,6 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "axios": "^0.19.2",
-    "connected-react-router": "^6.8.0",
     "dayjs": "^1.10.4",
     "lodash-es": "^4.17.15",
     "normalize.css": "^8.0.1",
