--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@emotion/styled": "^11.3.0",
     "axios": "^0.19.2",
     "dayjs": "^1.10.4",
+    "jwt-decode": "^3.1.2",
     "lodash-es": "^4.17.15",
     "normalize.css": "^8.0.1",
     "normalizr": "^3.6.0",
