--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.dev
+.env.prod
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
