replace webpack to vite

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Praise Each",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.js --host 0.0.0.0",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.prod.js",
+    "start": "cross-env NODE_ENV=development vite serve --host 0.0.0.0 --port 8080",
+    "build": "yarn clean && cross-env NODE_ENV=production vite build",
+    "build:analyze": "yarn build --mode analyze",
     "eslint": "eslint --ext .js,.json,.ts,.tsx --ignore-path .eslintignore .",
-    "typecheck": "tsc --project tsconfig.json --noEmit"
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/wn-seko/praise-each-frontend#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.10",
     "@types/emoji-mart": "^3.0.8",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash-es": "^4.17.3",
@@ -30,41 +33,24 @@
     "@types/uuid": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "autoprefixer": "^9.8.4",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^3.6.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsdoc": "^28.5.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
-    "fork-ts-checker-webpack-plugin": "^5.0.5",
-    "html-webpack-plugin": "^4.3.0",
-    "html-webpack-tags-plugin": "^2.0.17",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.2.1",
     "prettier": "^2.4.1",
-    "react-hot-loader": "^4.12.21",
+    "react-hot-loader": "^4.13.0",
     "rimraf": "^3.0.2",
-    "source-map-loader": "^1.0.0",
-    "string-replace-loader": "^2.3.0",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
+    "rollup": "^2.0.0",
+    "rollup-plugin-visualizer": "^5.6.0",
     "typed-css-modules": "^0.6.4",
     "typescript": "^3.9.5",
     "utility-types": "^3.10.0",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "vite": "^2.9.6",
+    "vite-react-jsx": "^1.1.2"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
