--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.2",
+    "react-icons": "^4.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.0.3",
