--- a/package.json
+++ b/package.json
@@ -68,15 +68,13 @@
     "react": "^16.13.1",
     "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
-    "react-dropdown": "^1.9.2",
     "react-icons": "^4.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.0.3",
     "react-use": "^17.2.4",
     "recoil": "^0.4.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-css": "^2.4.1"
   },
   "engine": {
     "node": ">=14.4.0"
