--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development vite serve --host 0.0.0.0 --port 8080",
-    "build": "yarn clean && cross-env NODE_ENV=production vite build",
+    "build": "clean && cross-env NODE_ENV=production vite build",
     "build:analyze": "yarn build --mode analyze",
     "eslint": "eslint --ext .js,.json,.ts,.tsx --ignore-path .eslintignore .",
-    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "typecheck": "tsc --project tsconfig.json --noEmit --skipLibCheck",
     "clean": "rimraf dist"
   },
   "repository": {
@@ -26,6 +26,7 @@
     "@types/emoji-mart": "^3.0.8",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash-es": "^4.17.3",
+    "@types/node": "^17.0.31",
     "@types/react-color": "^3.0.5",
     "@types/react-dom": "^16.9.8",
     "@types/react-notification-system": "^0.2.40",
@@ -47,7 +48,7 @@
     "rollup": "^2.0.0",
     "rollup-plugin-visualizer": "^5.6.0",
     "typed-css-modules": "^0.6.4",
-    "typescript": "^3.9.5",
+    "typescript": "^4.6.4",
     "utility-types": "^3.10.0",
     "vite": "^2.9.6",
     "vite-react-jsx": "^1.1.2"
