--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "~/*": ["./*"]
     },
+    "lib": ["es5", "es6", "es7", "es2018", "dom"],
     "sourceMap": true,
     "strict": true,
     "noUnusedLocals": true,
@@ -21,8 +22,9 @@
     "target": "esnext",
     "jsx": "react",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "include": ["./src/**/*", "env/validator.ts", "env/env.js"],
-  "exclude": ["node_modules", "build", "scripts"]
+  "exclude": ["node_modules", "node_modules/@types", "./**/*.js", "./**/*.json", "build", "scripts"]
 }
