--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Praise Each",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.js --host 0.0.0.0",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.prod.js",
+    "start": "cross-env NODE_ENV=development vite serve --host 0.0.0.0 --port 8080",
+    "build": "clean && cross-env NODE_ENV=production vite build",
+    "build:analyze": "yarn build --mode analyze",
     "eslint": "eslint --ext .js,.json,.ts,.tsx --ignore-path .eslintignore .",
-    "typecheck": "tsc --project tsconfig.json --noEmit"
+    "typecheck": "tsc --project tsconfig.json --noEmit --skipLibCheck",
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -20,74 +22,60 @@
   },
   "homepage": "https://github.com/wn-seko/praise-each-frontend#readme",
   "devDependencies": {
-    "@types/emoji-mart": "^3.0.8",
-    "@types/jwt-decode": "^2.2.1",
-    "@types/lodash-es": "^4.17.3",
-    "@types/react-color": "^3.0.5",
+    "@babel/core": "^7.17.10",
+    "@types/emoji-mart": "^3.0.9",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "^17.0.31",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^16.9.8",
-    "@types/react-notification-system": "^0.2.40",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/uuid": "^8.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "autoprefixer": "^9.8.4",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.2",
+    "@types/react-notification-system": "^0.2.42",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^3.6.0",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^28.5.1",
+    "dotenv": "^16.0.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "fork-ts-checker-webpack-plugin": "^5.0.5",
-    "html-webpack-plugin": "^4.3.0",
-    "html-webpack-tags-plugin": "^2.0.17",
-    "mini-css-extract-plugin": "^0.9.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.2.1",
-    "prettier": "^2.4.1",
-    "react-hot-loader": "^4.12.21",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "prettier": "^2.6.2",
+    "react-hot-loader": "^4.13.0",
     "rimraf": "^3.0.2",
-    "source-map-loader": "^1.0.0",
-    "string-replace-loader": "^2.3.0",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
+    "rollup": "^2.71.1",
+    "rollup-plugin-visualizer": "^5.6.0",
     "typed-css-modules": "^0.6.4",
-    "typescript": "^3.9.5",
+    "typescript": "^4.6.4",
     "utility-types": "^3.10.0",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "vite": "^2.9.7",
+    "vite-react-jsx": "^1.1.2"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "axios": "^0.19.2",
-    "dayjs": "^1.10.4",
-    "dotenv": "^10.0.0",
+    "dayjs": "^1.11.1",
     "emoji-mart": "^3.0.1",
+    "framer-motion": "^6.3.3",
     "jwt-decode": "^3.1.2",
     "lodash-es": "^4.17.15",
     "normalize.css": "^8.0.1",
-    "normalizr": "^3.6.0",
+    "normalizr": "^3.6.2",
     "react": "^16.13.1",
     "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
-    "react-dropdown": "^1.9.2",
+    "react-icons": "^4.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-toastify": "^8.0.3",
-    "react-use": "^17.2.4",
+    "react-toastify": "^8.2.0",
+    "react-use": "^17.3.2",
     "recoil": "^0.4.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-css": "^2.4.1"
   },
   "engine": {
     "node": ">=14.4.0"
