--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "~/*": ["./*"]
     },
+    "lib": ["es5", "es6", "es7", "es2018", "dom"],
     "sourceMap": true,
     "strict": true,
     "noUnusedLocals": true,
@@ -16,13 +17,14 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "composite": true,
-    "module": "es6",
+    "module": "esnext",
     "moduleResolution": "node",
-    "target": "es2019",
+    "target": "esnext",
     "jsx": "react",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
-  "include": ["./src/**/*", "env/validator.js", "env/env.js"],
-  "exclude": ["node_modules", "build", "scripts"]
+  "include": ["./src/**/*", "env/validator.ts", "env/env.js"],
+  "exclude": ["node_modules", "node_modules/@types", "./**/*.js", "./**/*.json", "build", "scripts"]
 }
