update react-router and react-dom

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.31",
     "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "17.0.2",
     "@types/react-notification-system": "^0.2.42",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
@@ -65,11 +65,11 @@
     "lodash-es": "^4.17.15",
     "normalize.css": "^8.0.1",
     "normalizr": "^3.6.2",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router": "^5.2.0",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "react-use": "^17.3.2",
