[chore]Update libraries (#12)
* update recoil

* remove typed-css-modules

* update axios

* update react-router-dom

* fix: design

* fix: layout

* update react-router and react-dom

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.31",
     "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "17.0.2",
     "@types/react-notification-system": "^0.2.42",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
@@ -48,7 +48,6 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.71.1",
     "rollup-plugin-visualizer": "^5.6.0",
-    "typed-css-modules": "^0.6.4",
     "typescript": "^4.6.4",
     "utility-types": "^3.10.0",
     "vite": "^2.9.7",
@@ -58,7 +57,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "axios": "^0.19.2",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.1",
     "emoji-mart": "^3.0.1",
     "framer-motion": "^6.3.3",
@@ -66,15 +65,15 @@
     "lodash-es": "^4.17.15",
     "normalize.css": "^8.0.1",
     "normalizr": "^3.6.2",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "react-use": "^17.3.2",
-    "recoil": "^0.4.1",
+    "recoil": "^0.7.2",
     "semantic-ui-css": "^2.4.1"
   },
   "engine": {
