--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development vite serve --host 0.0.0.0 --port 8080",
-    "build": "clean && cross-env NODE_ENV=production vite build",
+    "build": "yarn clean && cross-env NODE_ENV=production vite build",
     "build:analyze": "yarn build --mode analyze",
     "eslint": "eslint --ext .js,.json,.ts,.tsx --ignore-path .eslintignore .",
     "typecheck": "tsc --project tsconfig.json --noEmit --skipLibCheck",
@@ -25,7 +25,6 @@
     "@babel/core": "^7.17.10",
     "@types/emoji-mart": "^3.0.9",
     "@types/jwt-decode": "^3.1.0",
-    "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.31",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "17.0.2",
@@ -62,7 +61,6 @@
     "emoji-mart": "^3.0.1",
     "framer-motion": "^6.3.3",
     "jwt-decode": "^3.1.2",
-    "lodash-es": "^4.17.15",
     "normalize.css": "^8.0.1",
     "normalizr": "^3.6.2",
     "react": "^17.0.2",
